# s2client-api

./: .gitignore  config.txt
baselines/: Economic.py  all_in.py  all_in_baseline.csv  cheese.py  cheese_baseline.csv  economic_baseline.csv  timing.py  timing_baseline.csv
docs/: building.md
examples/: CMakeLists.txt  all_protoss.h  cnn_data_gatherer.h  convex_hull.h  convex_hull_slow.h  dtw.cpp  dtw_data_gatherer.h  dynamic_time_warping.h  first_unit_death.h  get_file_names.h  md_dtw.h  parse_csv.h  replay.cc  time_unit_created.h  unit_centroid.h
include/sc2api/: config.h  sc2_args.h  sc2_coordinator.h  sc2_replay_observer.h  sc2_typeenums.h
project/: config.h  config.txt
src/: CNN.py  ScoreCNN.py
src/sc2api/: sc2_args.cc  sc2_coordinator.cc  sc2_replay_observer.cc
src/test_case/: 10127 3.16.1 560180215.000000_CNN.csv  1021 3.16.1 560180197.000000_CNN.csv  10232 3.16.1 560180215.000000_CNN.csv  1043 3.16.1 560180197.000000_CNN.csv  10723 3.16.1 560180215.000000_CNN.csv  10789 3.16.1 560180215.000000_CNN.csv  10790 3.16.1 560180215.000000_CNN.csv  1090 3.16.1 560180197.000000_CNN.csv  11000 3.16.1 560180215.000000_CNN.csv  11052 3.16.1 560180215.000000_CNN.csv  11139 3.16.1 560180215.000000_CNN.csv  1114 3.16.1 560180197.000000_CNN.csv  11205 3.16.1 560180215.000000_CNN.csv  11323 3.16.1 560180215.000000_CNN.csv  1156 3.16.1 560180197.000000_CNN.csv  11804 3.16.1 560180215.000000_CNN.csv  11851 3.16.1 560180215.000000_CNN.csv  12030 3.16.1 560180215.000000_CNN.csv  12592 3.16.1 560180215.000000_CNN.csv  12623 3.16.1 560180215.000000_CNN.csv  1287 3.16.1 560180197.000000_CNN.csv  13071 3.16.1 560180215.000000_CNN.csv  13196 3.16.1 560180215.000000_CNN.csv  13369 3.16.1 560180215.000000_CNN.csv  13401 3.16.1 560180215.000000_CNN.csv  1342 3.16.1 560180197.000000_CNN.csv  13424 3.16.1 560180215.000000_CNN.csv  13564 3.16.1 560180215.000000_CNN.csv  1376 3.16.1 560180197.000000_CNN.csv  14067 3.16.1 560180215.000000_CNN.csv  1413 3.16.1 560180197.000000_CNN.csv  14175 3.16.1 560180215.000000_CNN.csv  14411 3.16.1 560180215.000000_CNN.csv  14489 3.16.1 560180215.000000_CNN.csv  14659 3.16.1 560180215.000000_CNN.csv  14773 3.16.1 560180215.000000_CNN.csv  14822 3.16.1 560180215.000000_CNN.csv  14831 3.16.1 560180215.000000_CNN.csv  (+493 more)
